compiler/testData/diagnostics/tests/testsWithJava23/valhallaValueClasses/withoutJvmPreview.fir.kt
// LANGUAGE: +ValhallaValueClasses
// IGNORE_BACKEND_K1: ANY
// RUN_PIPELINE_TILL: FRONTEND
// JVM_TARGET: 23

<!VALHALLA_VALUE_CLASS_WITHOUT_JVM_PREVIEW!>value<!> class A(val x: Int)
